@@ -26,6 +26,12 @@ def check_if_cluster():
     ips = all_gather_array(myip, comm, 1, 'int64')
     return not len(numpy.unique(ips)) == 1
 
+def check_valid_path(path):
+
+    data = numpy.array([os.path.exists(path)], dtype='int32')
+    res = all_gather_array(data, comm, dtype='int32').astype(numpy.bool)
+    return numpy.all(res)
+
 def get_local_ring(local_only=False):
     ## First we need to identify machines in the MPI ring
     from uuid import getnode as get_mac
