@@ -9,6 +9,8 @@ Release 0.8.5
 * can now display the electrode labels in preview GUI
 * detects if a wrong install of MPI is present (linking with mpi4py)
 * conda install overwrites the old parameter file
+* raw dispay of the MUA in the result GUI (to be improved)
+* display an error if not all nodes on a cluster can read the datafiles
 
 =============
 Release 0.8.4
